# core.depeche_code

./: .gitignore  README.md  pyproject.toml  setup.py
depechecode/: logger.py
depechecode/airflow_plugin/: __init__.py
depechecode/airflow_plugin/operators/bash/: __init__.py  bash_venv_operator.py  virtual_env.py
depechecode/airflow_plugin/operators/dbt/: __init__.py  dbt_operator.py
depechecode/airflow_plugin/operators/deployment/: __init__.py  dbt_deployment_operator.py  s3_deployment_operator.py
depechecode/airflow_plugin/operators/deployment/serendipity/: __init__.py  azure_interactor.py
depechecode/dag_builder/: __init__.py  compile.py  dbt_parser.py  secret.py
depechecode/virtual_env/: __init__.py  virtual_env.py
